--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Python and Vectorization.ipynb
@@ -165,7 +165,10 @@
     "### Calculating for $m$ examples and $n = 2$ features <font color='red'>without</font> vectorization\n",
     "\n",
     "$\n",
-    "J = 0; dw_1 = 0; dw_2 = 0; db = 0 \\\\\n",
+    "J = 0; \\\\\n",
+    "dw_1 = 0; \\\\\n",
+    "dw_2 = 0; \\\\\n",
+    "db = 0 \\\\\n",
     "\\\\\n",
     "\\text{For}\\ \\ i=1\\ \\ \\text{to}\\ \\ m \\\\\n",
     "\\hspace{15pt}z^{(i)} = w^Tx^{(i)} + b \\\\ \n",
@@ -179,7 +182,7 @@
     "\\hspace{15pt}dw_1\\ /=\\ m \\\\\n",
     "\\hspace{15pt}dw_2\\ /=\\ m \\\\\n",
     "\\hspace{15pt}db\\ /=\\ m \\\\\n",
-    "\\text{Fim for}\n",
+    "\\text{End for}\n",
     "$\n",
     "\n",
     "### Updating weights\n",
@@ -190,10 +193,13 @@
     "b\\ := b - \\alpha db \\\\\n",
     "$\n",
     "\n",
+    "---\n",
     "### Calculating for $m$ examples and $n = 2$ features <font color='red'>with</font> vectorization\n",
     "\n",
     "$\n",
-    "J = 0; dw = np.zeros((n_x, 1)); db = 0; \\\\\n",
+    "J = 0; \\\\\n",
+    "dw = np.zeros((n_x, 1)); \\\\\n",
+    "db = 0; \\\\\n",
     "\\\\\n",
     "\\text{For}\\ \\ i=1\\ \\ \\text{to}\\ \\ m \\\\\n",
     "\\hspace{15pt}z^{(i)} = w^Tx^{(i)} + b \\\\ \n",
@@ -205,7 +211,7 @@
     "\\hspace{15pt}J\\ /=\\ m \\\\\n",
     "\\hspace{15pt}dw\\ /=\\ m \\\\\n",
     "\\hspace{15pt}db\\ /=\\ m \\\\\n",
-    "\\text{Fim for}\n",
+    "\\text{End for}\n",
     "$\n",
     "\n",
     "### Updating weights\n",
@@ -232,7 +238,7 @@
     "\n",
     "$\n",
     "Z = [ z^{(1)}\\ \\ z^{(2)}\\ \\ \\dots z^{(m)}] = w^TX + [b, b, \\dots b] \\hspace{15pt}\\rightarrow\\hspace{15pt} b \\in \\mathbb{R} (1,1) matrix \\\\\n",
-    "Z = np.dot(w.T, X) + b \\\\\n",
+    "Z = np.dot(w^T, X) + b \\\\\n",
     "A = [ a^{(1)}\\ \\ a^{(2)}\\ \\ \\dots a^{(m)}] = \\sigma(Z)\n",
     "$"
    ]
@@ -252,8 +258,8 @@
     "\n",
     "$\n",
     "A = [a^{(1)}\\ \\ a^{(2)}\\ \\ \\dots a^{(m)}]  \\hspace{30pt} Y = [y^{(1)}\\ \\ y^{(2)}\\ \\ \\dots y^{(m)}]\\\\\n",
-    "dZ = A - Y \\hspace{15pt}\\rightarrow\\hspace{15pt} [a^{(1)}y^{(1)}\\ \\ a^{(2)}y^{(2)}\\ \\ dots ]\n",
-    "db = \\frac{1}{m} np.sum(dZ)\n",
+    "dZ = A - Y \\hspace{15pt}\\rightarrow\\hspace{15pt} [a^{(1)}y^{(1)}\\ \\ a^{(2)}y^{(2)}\\ \\ \\dots ]\\\\ \n",
+    "db = \\frac{1}{m} np.sum(dZ) \\\\\n",
     "dw = \\frac{1}{m} XdZ^T\n",
     "$\n",
     "\n",
@@ -297,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
