--- a/edX/IBM/DL0110EN/Week 2/lab/1.2 Two-Dimensional Tensors.ipynb
+++ b/edX/IBM/DL0110EN/Week 2/lab/1.2 Two-Dimensional Tensors.ipynb
@@ -924,22 +924,7 @@
     "X = torch.tensor([[1,2],[1,2],[1,2]])\n",
     "XY = torch.mm(X,Y)\n",
     "print(\"Result:\")\n",
-    "print(XY)\n",
-    "# Type your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Double-click <b>here</b> for the solution.\n",
-    "\n",
-    "<!--\n",
-    "X = torch.tensor([[0, 1], [1, 2]])\n",
-    "Y = torch.tensor([[-1, -2, 0], [2, 1, 2]])\n",
-    "X_times_Y = torch.mm(X, Y)\n",
-    "print(\"The result of X * Y: \", X_times_Y)\n",
-    "-->"
+    "print(XY)"
    ]
   },
   {
@@ -947,45 +932,6 @@
    "metadata": {},
    "source": [
     "<!--Empty Space for separating topics-->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!--Empty Space for separating topics-->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a href=\"http://cocl.us/pytorch_link_bottom\">\n",
-    "    <img src=\"https://cocl.us/pytorch_image_bottom\" width=\"750\" alt=\"PyTorch Bottom\" />\n",
-    "</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>About the Authors:</h2> \n",
-    "\n",
-    "<a href=\"https://www.linkedin.com/in/joseph-s-50398b136/\">Joseph Santarcangelo</a> has a PhD in Electrical Engineering, his research focused on using machine learning, signal processing, and computer vision to determine how videos impact human cognition. Joseph has been working for IBM since he completed his PhD."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Other contributors: <a href=\"https://www.linkedin.com/in/michelleccarey/\">Michelle Carey</a>, <a href=\"www.linkedin.com/in/jiahui-mavis-zhou-a4537814a\">Mavis Zhou</a> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr>"
    ]
   },
   {
