Quiz and exercises

--- a/edX/IBM/DL0110EN/Week 2/Quiz.ipynb
+++ b/edX/IBM/DL0110EN/Week 2/Quiz.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "1. What's wrong with the following class or custom module:<br>\n",
     "\n",
-    "```\n",
+    "```python\n",
     "import torch.nn as nn\n",
     "\n",
     "torch.manual_seed(1)\n",
@@ -268,9 +268,11 @@
    "source": [
     "2. The loss is a function of `w` and `b`. What is wrong with the following lines of code?\n",
     "\n",
-    "`w.data = w.data - lr*w.grad.data`<br>\n",
-    "`b.data = b.data - lr*b.grad.data`<br>\n",
-    "`loss.backward()`<br>\n",
+    "```python \n",
+    "w.data = w.data - lr*w.grad.data\n",
+    "b.data = b.data - lr*b.grad.data\n",
+    "loss.backward()\n",
+    "```\n",
     "\n",
     "&#9744; `b.data` is not an attribute<br>\n",
     "&#9744; `w.data` is not an attribute<br>\n",
@@ -358,10 +360,12 @@
    "source": [
     "2. What's missing from the following code?<br>\n",
     "\n",
-    "`yhat=model(x)`<br>\n",
-    "`loss=criterion(yhat,y)`<br>\n",
-    "`loss.backward()`<br>\n",
-    "`optimizer.step()`<br>\n",
+    "```python\n",
+    "yhat=model(x)\n",
+    "loss=criterion(yhat, y)\n",
+    "loss.backward()\n",
+    "optimizer.step()\n",
+    "```\n",
     " \n",
     "&#9744; There is no prediction<br>\n",
     "&#9744; Calculation of the loss<br>\n",
@@ -375,8 +379,10 @@
    "source": [
     "3. What's wrong with the following lines of code?<br>\n",
     "\n",
-    "`optimizer = optim.SGD(model.parameters(), lr = 0.01)`<br>\n",
-    "`model=linear_regression(1,1)`\n",
+    "```python\n",
+    "optimizer = optim.SGD(model.parameters(), lr = 0.01)\n",
+    "model=linear_regression(1,1)\n",
+    "```\n",
     " \n",
     "&#9745; The model object has not been created. As such, the argument that specifies what Tensors should be optimized does not exist<br>\n",
     "&#9744; There is no loss function<br>\n",
@@ -446,13 +452,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 13. Multiple Linear Regression Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Consider the following code, including the bias. How many parameters does the object model have?<br>\n",
+    "\n",
+    "`model=nn.Linear(4,1)`\n",
+    "\n",
+    "&#9744; 3<br>\n",
+    "&#9744; 4<br>\n",
+    "&#9745; 5<br>\n",
+    "&#9744; 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Consider the following code. How many rows and columns does the tensor yhat contain?<br>\n",
+    "\n",
+    "```python\n",
+    "X = torch.tensor([[1.0, 1.0, 1],\n",
+    "                  [1.0, 2.0, 1],\n",
+    "                  [1.0, 3.0, 1],\n",
+    "                  [1.0, 3.0, 1]])\n",
+    "model=nn.Linear(3,1)\n",
+    "yhat=model(X)\n",
+    "```\n",
+    " \n",
+    "&#9745; 4, 1<br>\n",
+    "&#9744; 3, 1<br>\n",
+    "&#9744; 1, 3<br>\n",
+    "&#9744; 4, 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. How would you create a linear object with ten input features?<br>\n",
+    "\n",
+    "&#9744; `model=nn.Linear(1,10)`<br>\n",
+    "&#9745; `model=nn.Linear(10,1)`<br>\n",
+    "&#9744; `model=nn.Linear(9,10)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 14. Multiple Linear Regression Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. How do you calculate the gradient and perform the update for Multiple Linear Regression with 10 input variables?<br>\n",
+    "\n",
+    "&#9744; ``loss.backward(d=10)\n",
+    "   optimizer.step(d=10)``<br>\n",
+    "&#9745; ``loss.backward()\n",
+    "   optimizer.step()``<br>\n",
+    "&#9744; ``loss.backward()\n",
+    "   optimizer.step(d=10)``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. If the input to our linear regression object is of 10 dimensions, including the bias, how many variables does our cost or total loss function contain?<br>\n",
+    "\n",
+    "Answer: **Unanswered!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15. Multiple Output Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. What is true about the following lines of code?<br>\n",
+    "    \n",
+    "```python\n",
+    "class linear_regression(nn.Module):\n",
+    "    def __init__(self,input_size,output_size):\n",
+    "        super(linear_regression,self).__init__()\n",
+    "        self.linear=nn.Linear(input_size,output_size)\n",
+    "    def forward(self,x):\n",
+    "        yhat=self.linear(x)\n",
+    "        return yhat\n",
+    "        \n",
+    "model=linear_regression(3,10)\n",
+    "```\n",
+    "\n",
+    "&#9745; The output of the model will have 10 columns<br>\n",
+    "&#9744; The output of the model will have 10 rows<br>\n",
+    "&#9744; The output of the model will have 3 rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. How many bias parameters will object model have?<br>\n",
+    "\n",
+    "```python\n",
+    "class linear_regression(nn.Module):\n",
+    "    def __init__(self,input_size,output_size):\n",
+    "        super(linear_regression,self).__init__()\n",
+    "        self.linear=nn.Linear(input_size,output_size)\n",
+    "    def forward(self,x):\n",
+    "        yhat=self.linear(x)\n",
+    "        return yhat\n",
+    "        \n",
+    "model=linear_regression(3,10)   \n",
+    "```\n",
+    "\n",
+    "Answer: **10**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of bias parameters: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import Linear\n",
+    "\n",
+    "class linear_regression(nn.Module):\n",
+    "    def __init__(self,input_size,output_size):\n",
+    "        super(linear_regression,self).__init__()\n",
+    "        self.linear=nn.Linear(input_size,output_size)\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        yhat=self.linear(x)\n",
+    "        return yhat\n",
+    "        \n",
+    "model=linear_regression(3,10)\n",
+    "print('Number of bias parameters: '+str(len(list(model.parameters())[1])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 16. Multiple Output Linear Regression Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. What parameters do you have to change to the method backwards() when you train Multiple Output Linear Regression compared to regular Linear Regression?<br>\n",
+    "\n",
+    "&#9744; You have to specify the number of the output variables<br>\n",
+    "&#9745; None of them<br>\n",
+    "&#9744; All of them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "&#9744;"
-   ]
+   "source": []
   }
  ],
  "metadata": {
