Added Week 1 content

--- a/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
@@ -809,7 +809,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Implementation\n",
+    "class Percolation(WeightedQuickUnion):\n",
+    "    def __init__(self, D):\n",
+    "        # D: Dimensions (x, y) of the rectangle\n",
+    "        assert isinstance(D, tuple), \"%r is not a set\" % N\n",
+    "        self.x, self.y = D\n",
+    "        N = self.x * self.y\n",
+    "        WeightedQuickUnion.__init__(self, N)\n",
+    "        self._create_field()\n",
+    "        \n",
+    "    def _create_field(self):\n",
+    "        # create a rectangle self.x and self.y\n",
+    "        # and add the virtual node to the top \n",
+    "        # and to the bottom\n",
+    "        \n",
+    "        \n",
+    "    def union(self, p, q):\n",
+    "        # add connection between p and q\n",
+    "        root_p = self.root(p)\n",
+    "        root_q = self.root(q)\n",
+    "        if root_p == root_q: \n",
+    "            return\n",
+    "        if self.sz[root_p] < self.sz[root_q]:\n",
+    "            self.id[root_p] = root_q\n",
+    "            self.sz[root_q] += self.sz[root_p]\n",
+    "        else:\n",
+    "            self.id[root_q] = root_p\n",
+    "            self.sz[root_p] += self.sz[root_q]\n",
+    "        \n",
+    "    def root(self, p):\n",
+    "        # get the root of the tree\n",
+    "        while p != self.id[p]:\n",
+    "            uppernode = self.id[p]\n",
+    "            self.id[p] = self.id[uppernode]\n",
+    "            p = self.id[p]\n",
+    "        return p"
+   ]
   },
   {
    "cell_type": "code",
