Fixed image path

--- a/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
@@ -515,7 +515,7 @@
     "\n",
     "Below we have a comparison of two trees created with Quick-Union and Weighted Quick-Union algorithms. In this image, we can see the difference in depth between both trees.\n",
     "\n",
-    "<img src=\"images/comparison.svg\" width=\"90%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/comparison.svg\" width=\"90%\"/>\n",
     "\n",
     "This example illustrates a hundred elements and 88 union operations. We can see in the top tree that some nodes contain a fair distance from the root. In the bottom tree, all the nodes are within distance four from the root and the average distance to the root is much, much lower."
    ]
