Fixed image path

--- a/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "For example, in the image below, we have a set of ten objects:\n",
     "\n",
-    "<img src=\"images/dynamic_connectivity.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/dynamic_connectivity.svg\" width=\"50%\"/>\n",
     "\n",
     "These objects were connected using the following sequence of commands:\n",
     "\n",
@@ -59,7 +59,7 @@
     "For example, in this small example below we have three connected components. One consisting of just object zero, second one with objects one, four and five; and the third one with the other four objects. \n",
     "\n",
     "\n",
-    "<img src=\"images/small_connection.svg\" width=\"40%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/small_connection.svg\" width=\"40%\"/>\n",
     "\n",
     "$$\n",
     "\\{\\ \\ 0\\ \\ \\}\\ \\ \\{\\ \\ 1\\ \\ 4\\ \\ 5\\ \\ \\}\\ \\ \\{\\ \\ 2\\ \\ 3\\ \\ 6\\ \\ 7\\ \\ \\}\n",
@@ -291,11 +291,11 @@
     "\n",
     "In this algorithm, we represent the connections between objects using a vector. This vector stores the ids of the connected objects. Two objects share a connection if and only if they have the same id. Thus, consider the initial state of the vector in the image below, and after having added a pair with `union(3, 4)`, where the `index=3` (index of `p`) receives the value of the `index=4` (index of `q`).\n",
     "\n",
-    "<img src=\"images/quickfind.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/quickfind.svg\" width=\"50%\"/>\n",
     "\n",
     "It is important to note that many values can changed when adding a new value. For example, using the example above, if we add using `union(4, 0)`, we have to add `index=0` to the `id=4` and `id=3`, generating:\n",
     "\n",
-    "<img src=\"images/quickfind_union.svg\" width=\"50%\"/>"
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/quickfind_union.svg\" width=\"50%\"/>"
    ]
   },
   {
@@ -401,7 +401,7 @@
     "\n",
     "Quick-union is called a lazy approach to algorithm design since we try to avoid doing work until we have to. It uses the same data structure or array with size $M$ as Quick-find algorithm. Unlike Quick-find, in quick-union an array represents a set of trees, where each entry in the array is going to contain a reference to its parent in the tree. Thus, each entry in the array has associated with it a root. Elements that are connected to their own component and point to themselves are roots. From this data structure we can associate with each item a root, which is representative of it's connected component. The image below illustrates the addition of connections in the structure:\n",
     "\n",
-    "<img src=\"images/quickunion.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/quickunion.svg\" width=\"50%\"/>\n",
     "\n",
     "To merge components that are in different components, we set the ID of `p`s root to the ID of `q`'s root. For example, we apply `union(4, 0)` in the image above. As the roots are the same ids, we just set the value of the `index=4` to zero, indicating that the root of four is zero. Next, we apply `union(0, 7)`, indicating that the root of the tree containing zero is seven. Thus, we set the value of `index=0` to seven. In `union(9, 4)`, we see that the root of four is seven. Thus, we have to set the value of `index=9` as the root seven. In case of create a union of two components that have the same root, we keep the tree unchanged. For example, we apply `union(0, 9)` and do not change the tree since both have the same root.\n"
    ]
@@ -509,7 +509,7 @@
     "\n",
     "Weighted quick-union is a very effective improvement on quick-union. The idea is to process as quick-union but taking some steps to avoid having tall trees. Thus, if you have a large tree and a small tree to combine together, you should avoid putting the smaller tree under the larger, which would lead to long tall trees. In order to avoid large trees, we keep track of the number of objects in each tree and maintain balance by always making sure that we link the root of the smaller tree to the root of the larger tree. The image below illustrates an example of this algorithm.\n",
     "\n",
-    "<img src=\"images/weighted_quickunion.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/weighted_quickunion.svg\" width=\"50%\"/>\n",
     "\n",
     "In this algorithm, when there is only two items to link, it works the same way as quick-union no matter which order their arguments came since both have the smaller tree. Thus, when performing `union(4, 0)` we can put any of them as root. Here we add zero as root of four. Next, when performing `union(0, 7)` we have to add the element to keep the smallest tree. Thus, unlike quick-union where we add zero to the root seven, in weighted quick-union we add seven to the root zero, keeping a tree with two nodes deep instead of tree nodes deep. When applying `union(9, 4)`, we add nine to the root of four as it would occur in quick-union. This process continues up to the last node being added. \n",
     "\n",
@@ -695,7 +695,7 @@
     "\n",
     "An improvement of the weight quick union algorithm can be performed by path compression. The idea is that when we are trying to find the root of the tree containing a given node, we are checking all the nodes on the path from that node to the root. While we are doing that, we might as well make each one of those just point to the root. We can easlily do this by making every other node in the path point to its grandparent on the way up the tree. In the image below we can see on the left side a complete tree in which we are going to apply `union(6, 3)`. Thus, we are going to add the tree containing 6 to the tree containing 3. We discover that the root of the tree is zero, then, we add the tree of root six to the root zero. In the path to discover the root, we also have the nodes `3` and  `1`. Thus, we set the root of `3` as the root of the tree and keep the root of `1` as `0` since it is the root of the tree.\n",
     "\n",
-    "<img src=\"images/path_compression.svg\" width=\"60%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/path_compression.svg\" width=\"60%\"/>\n",
     "\n",
     "The implementation of path compression changes the algorithm of `WeightedQuickUnion` class when looking for the root of the tree. Below we add the path compression to the class. "
    ]
@@ -791,7 +791,7 @@
     "\n",
     "Percolation is a model containing an $n \\times n$ grid of squares that we call sites and it is used for many physical systems. Each site is open with probably $P$ (white tiles in the image below) or blocked with probability $(1 - P)$ (black tiles in the image below). A system is percolated if the top and the bottom are connected by open sites. For example, on the left side of the image below, one can find a way to get from the top to the bottom through white squares, but the system on the right does not percolate since there is no way to get from the top to the bottom through white squares. \n",
     "\n",
-    "<img src=\"images/percolation.svg\" width=\"60%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/percolation.svg\" width=\"60%\"/>\n",
     "\n",
     "If we get a randomized model where the sites are vacant with the given probability, then if the probability that a site is vacant is low, it's not going to percolate. There's not enough open sites to have a connection from the top to the bottom. If the probability is high and there is a lot of open sides, it definitely is going to percolate, and there would be lots of ways to get from the top to the bottom. On the other hand, when the probability is close to the half, it's questionable whether it percolates or not. In fact, there is a value as $N$ gets large that if you have less than that value it almost certainly that it will not percolate and if you have greater than the value it almost certainly will. \n",
     "\n",
@@ -799,7 +799,7 @@
     "\n",
     "To create our model, we create an object corresponding to each site, giving them a name from zero to $N^2 - 1$. After creating the table containing all sites, we can create two virtual sites that connect all the top sites and all the bottom sites respectively, as illustred on the left side of the image below. \n",
     "\n",
-    "<img src=\"images/model_percolation.svg\" width=\"90%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/model_percolation.svg\" width=\"90%\"/>\n",
     "\n",
     "We add the virtual sites since use all top and bottom sites would be a brute force algorithm when trying to verify the connectivity. It would generate a $N^2$ calls to `find` in order to check whether two sites are connected. For each site on the top, we would have to check each site on the bottom, what would become too slow for large values of $N$. To open a new site, we just connect it to all its adjacent open sites (as illustred on the right in the image above). Running enough simulations, we should get the percolation threshold of about 0.592746."
    ]
@@ -975,7 +975,7 @@
     "\n",
     "The animation below illustrates the percolation of a 5x5 field of the code above.\n",
     "\n",
-    "<img src=\"images/animation.gif\" width=\"300\" align=\"center\"/>"
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%201/images/animation.gif\" width=\"300\" align=\"center\"/>"
    ]
   },
   {
